--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -89,7 +89,7 @@ jobs:
           name: scoreboard
           path: ./build/scoreboard/html/
   deploy-pages:
-    if: github.ref == 'refs/heads/master'
+    # if: github.ref == 'refs/heads/master'
     needs:
       - build-sphinx
       - build-scoreboard
@@ -100,20 +100,34 @@ jobs:
       group: github-pages-deploy
       cancel-in-progress: false
     steps:
+      - name: Check if Pages is enabled
+        id: check-pages
+        run: |
+          status=$(curl -s -o /dev/null -w "%{http_code}" -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/pages)
+          if [ "$status" -eq 200 ]; then
+            echo "enabled=true" >> $GITHUB_OUTPUT
+          else
+            echo "enabled=false" >> $GITHUB_OUTPUT
+            echo "GitHub Pages not enabled, skipping deployment."
+          fi
       - name: Download artifact
+        if: ${{ steps.check-pages.outputs.enabled == 'true' }}
         uses: actions/download-artifact@v4
         with:
           name: sphinx-documentation
           path: ./
       - name: Download artifact
+        if: ${{ steps.check-pages.outputs.enabled == 'true' }}
         uses: actions/download-artifact@v4
         with:
           name: scoreboard
           path: ./scoreboard/
       - name: Upload artifact
+        if: ${{ steps.check-pages.outputs.enabled == 'true' }}
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./
       - name: Deploy to GitHub Pages
+        if: ${{ steps.check-pages.outputs.enabled == 'true' }}
         id: deployment
         uses: actions/deploy-pages@v4
