--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,11 +1,14 @@
 on:
   workflow_call:
 
+env:
+  DOCKER_IMAGE: "ghcr.io/learning-process/ppc-ubuntu:1.1"
+
 jobs:
   gcc-build:
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -60,7 +63,7 @@ jobs:
       - gcc-build
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -92,7 +95,7 @@ jobs:
       - gcc-test
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -116,7 +119,7 @@ jobs:
   clang-build:
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -162,7 +165,7 @@ jobs:
       - clang-build
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -194,7 +197,7 @@ jobs:
       - clang-test
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -220,7 +223,7 @@ jobs:
       - clang-build
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -268,7 +271,7 @@ jobs:
       - clang-sanitizer-build
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -306,7 +309,7 @@ jobs:
       - clang-sanitizer-test
     runs-on: ${{ matrix.os }}
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -334,7 +337,7 @@ jobs:
       - clang-test-extended
     runs-on: ubuntu-24.04
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
