--- a/.github/workflows/static-analysis-pr.yml
+++ b/.github/workflows/static-analysis-pr.yml
@@ -12,6 +12,9 @@ on:
       - '**/.clang-tidy'
       - '.github/workflows/static-analysis-pr.yml'
 
+env:
+  DOCKER_IMAGE: "ghcr.io/learning-process/ppc-ubuntu:1.1"
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
   cancel-in-progress: >-
@@ -23,7 +26,7 @@ jobs:
   clang-tidy:
     runs-on: ubuntu-24.04
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
@@ -71,7 +74,7 @@ jobs:
       - clang-tidy
     runs-on: ubuntu-24.04
     container:
-      image: ghcr.io/learning-process/ppc-ubuntu:1.1
+      image: ${{ env.DOCKER_IMAGE }}
       credentials:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
